--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<%- include('head', { title: 'Unsafe Login' }) -%>
+<%- include('head', { title: 'Safe Login' }) -%>
 
       <h1>Login</h1>
       <table>
