--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<%- include('head', { title: 'Unsafe Registration' }) -%>
+<%- include('head', { title: 'Safe Registration' }) -%>
   <h1>Registration</h1>
   <table>
     <tr>
