--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,25 +1,54 @@
 <%- include('head', { title: 'Safe Login' }) -%>
 
-      <h1>Login</h1>
-      <table>
-        <tr>
-          <td>
-            <form method="POST" action="/auth/login">
-              <p>
-                <label for="username">Username:</label>
-                <input type="text" name="username" id="username">
-              </p>
-              <p>
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password">
-              </p>
-              <p>
-                <input type="submit" value="Login">
-                <a href=/register class="button">Register</a>
-              </p>
-            </form>
+  <h1>Login</h1>
+  <table>
+    <tr>
+      <td>
+        <form method="POST" action="/auth/login">
+          <p>
+            <label for="username">Username:</label>
+            <input type="text" name="username" id="username">
+          </p>
+          <p>
+            <label for="password">Password:</label>
+            <input type="password" name="password" id="password">
+          </p>
+          <p>
+            <input type="submit" value="Login">
+            <a href=/register class="button">Register</a>
+          </p>
+        </form>
 
-          </td>
-        </tr>
-      </table>
-      <%- include('foot') -%>
+      </td>
+    </tr>
+    
+  </table>
+<table>
+  <tr>
+    <td>
+      <form action="/comment" method="POST"> 
+
+        <input type="text" name="comment" placeholder="Write a comment..."> 
+
+        <button type="submit">Post Comment</button> 
+
+    </form> 
+      <h2>Comments:</h2>
+
+      <ul>
+
+        <% comments.forEach(function(comment) { %>
+
+          <li>
+            <%= comment %>
+          </li>
+
+          <% }); %>
+
+      </ul>
+    </td>
+  </tr>
+</table>
+
+
+  <%- include('foot') -%>
